# pizza_delivery_API

./: .env  .gitignore  Pizzaria  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_01_07_1316-262f2f080151_tabelas.py  2024_01_07_2204-2df33a258d25_atualizando_tabela_user.py
src/: auth_routes.py  models.py  order_routes.py  schemas.py  security.py  service.py  settings.py
src/rotas/: auth.py  auth_routes.py
